<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="90dp"
    android:gravity="center"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="26sp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/System" />

    <LinearLayout
        android:id="@+id/num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome"
        android:layout_centerHorizontal="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/Number" />
        <EditText
            android:id="@+id/stu_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:theme="@style/MyEditText"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/num"
        android:layout_centerHorizontal="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/Code" />

        <EditText
            android:id="@+id/stu_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:maxLines="16"
            android:theme="@style/MyEditText"
            android:password="true"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/code"
        android:layout_centerHorizontal="true">
        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:background="@color/colorClear"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/Signin" />
        <Button
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:background="@color/colorClear"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/Signup" />
    </LinearLayout>
</RelativeLayout>

